@@ -1,13 +1,20 @@
 DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r5-3.16.patch1 3338 SHA256 95cfdf13bc78e07cc540d6fc9087f0b4d710ce225acf36abbbbdeee421b023b9 SHA512 fd484e55bbff30f37e8d4b4c652bfce8d1e9a1bd2221e2d965ce18bd3eb929a3109fc02910535735b4af88f2f4700980f167dd7429b89a0fefdc24e778522473 WHIRLPOOL 90c4ba8101e3513e58875073fa2a6a55446e026747a1011302e81f1a5f38808a8d25f522c233997fa97cefc26b807cd2fb0d86bd47d6bc98cbb3e383f58c1877
+DIST 0001-block-cgroups-kconfig-build-bits-for-BFQ-v7r6-3.17.patch1 3338 SHA256 157f6f386c47ddd9c4b9c9ae6c694c74d79c612bdda7f1df351335bba389a2e3 SHA512 4699780642d97f2a98e82bcaed4dd348a444dd17a908d84332a7423fec08fc715a96edcf45ec107f08279da89cc0800d0062162135135b1b467a2afbb3a6be32 WHIRLPOOL f1f2972517032942b7d4cec67b1895eaa009016c18e767530f48252846e653a80acae2dcb98afceb6d752ff31879706b11c92f48a2d0b9286fb9bf687ae197cd
 DIST 0002-block-introduce-the-BFQ-v7r5-I-O-sched-for-3.16.patch1 210285 SHA256 445b4e9ac3d9281a69523214e09323b36eda88f75ce07bc836451ead76e4adac SHA512 63db43b6ce1d43f9cf4bc1736378eae3a53b396d684eb40502889e272f291208bacbcfcc2bdbab84ece472133a3b35ee4cdb11bc0bb0986d7f9fbad0b40d8ba1 WHIRLPOOL 0888a20d9f5a79bd9acfc3ffd24f601c7704108ec8c172eff082be56f764e77d0f4e5158fc20db36a73228e34b3ae81e029fa8f61032148b12ea0e76489e7ae4
+DIST 0002-block-introduce-the-BFQ-v7r6-I-O-sched-for-3.17.patch1 223778 SHA256 53e591f0cab9ea0f0ae823041fa5134686de188a616657cb8acef34c01970c48 SHA512 ef69eac3bb620be4cad6988efc9161d58337bb7934f9a12aeb76392a3a308accd2b3cb56324c5c2a061781b98d160d501586b5c575a41f0596905022a936a2a9 WHIRLPOOL be44e895f674d60e16564f6103693906b5842f789f76f273c481e53c0d377140d754c2d195ffd11a51f049031d4e5912304212f549e86cd03d385c64fb0216d4
 DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r5-for-3.16.0.patch1 40497 SHA256 901db70d0e8ea73167998662cfa517e0d9c48d93b95500b5a5d74dfca2ac4c66 SHA512 b645b483623b2a5fa2806991e2f73df83faf4ecd5a331624e38c671ed462bf124b884caad2fc76c8eaa326e3645d2e3efe2d2c06da90410db4ff6798e3305326 WHIRLPOOL 7f726cf637a11363031795a4cc6511a85e6a13a71b732ff1a53bee6c12dfa01e266b1c1a275459c281d337b9cc90275446b9e11bf32a1316593ffcdfc27009a3
+DIST 0003-block-bfq-add-Early-Queue-Merge-EQM-to-BFQ-v7r6-for-3.17.0.patch1 41809 SHA256 9e70b8051c432168dd9ba0d21d5b96afb580473c9801fec185a745f53b75ae44 SHA512 5099ed226864a13df097256bd80caa09f0d5aea7d832fae72481bfebfad92824019a2762ba5f870a2b072eb2ffaaa9311021e3ea9efda3244b4c17dcf2a9e311 WHIRLPOOL d742a722f741629049d53622ae56f1a2d4cc4be4fd6d0eeac9de85ff80dfc1f0ba4933a1fa8b050fe7712ba464f486739afccd6de02cdcfa5a5dce2a55ab1774
 DIST README-v7r5-0.BFQ 20481 SHA256 3556af1e5317916c76be3a6ceb08348b67db18b824e55806cb5155f518d0a519 SHA512 73038b9962b7c5b3f0ec2d345f064b87a8d8391a562074a108372f9f48d68cc1f5dc918f058064a5974d09d72938cb21b8f228a3eff5ddf8e78b9570cae6bd16 WHIRLPOOL 9600f5443e373458ffcaab026c408b41d983785aa0aec6fb34ddb1a4224b980876a0b3c6081dc0a5dd52f31b64dddde07cdf2b4d14f6441a46485c057b85f4e4
+DIST README-v7r6-0.BFQ 20800 SHA256 caadc9333a10329ca54386ffc6ec6733550ff055845a8e627ceffd634a5b5dd1 SHA512 0d4925c7ecd237b5d9836ad57429153731d95ad7817252489bbeebdd2424ae9b52c131bec1627efcf6835c79a203d76f4bbecd5bc1913cd2f60de06efac5d6e3 WHIRLPOOL fd2de12560e1ea1505cdc6289d4b709e6037bc29329a2238ae892bb141ea8854c8eb2990f7783937232365dfce4cb027c3ef0792664b48be45474b5e7495518d
 DIST aufs-sources-3.16_p20140818.tar.xz 160300 SHA256 2353972e8d9df0ee031b032669bc731f9aa7514ce27bcfb915e66bb5aee50d6e SHA512 95baadc549b5e99f83cb5698da1bf53cc161d96ef64f8613db384718c02fa4924953a73832b73419ded43dbca3c1af759b11f2bd6b47e31cbbd195be8a0df600 WHIRLPOOL f82c4e24e2df42b58d079d7b22923bbb0c4a5bce65e1f5d20da67e75dec0b4b9a058515f6267229f4abfc38dfe52e3c92a401a20b0fdf8abe26d9f88c1c46320
 DIST aufs-sources-3.16_p20140915.tar.xz 160732 SHA256 f09aac80964c3218d233a1012a58029e33bb50274ca3a7454ba00e11c38d1f2c SHA512 188a5226226a1760f5dc0a36d5c9cd807aa63089a900aeea0340a4d5eacfd6ec6e8a27cf9b8d0c319f835bc37aa4b300892d2155d1bb7ea8f2ad651f05df1803 WHIRLPOOL 68a572624ce77805be90f87a2b7073c7f14db8ea9894f7f9083359897f2d64e8478f0c64c483782fcc5d7039b0e4efd63f5b527f4fe1398b53aa8acaa3501a7c
 DIST aufs-sources-3.16_p20141006.tar.xz 160792 SHA256 b75868891eab6c111355061585059439511d64e808693972be9b7e9de575db30 SHA512 b5bed763a6633fcb8de9ddb11c7f08c1802c25fbd7b652828ead81e77155d8f45efcb8c320d35a9907eed9b09b3538fb55a9ab032672de55f7ed8158593e9513 WHIRLPOOL dbce16255aa4624c6abd78f7c993975562a7a4f1d10d863c87a46da95ca345562e6d8ed18af57c08f3fce81d2aa5edd9b7464cead7c612dc86f9937e6d46575c
 DIST aufs-sources-3.16_p20141013.tar.xz 160792 SHA256 b75868891eab6c111355061585059439511d64e808693972be9b7e9de575db30 SHA512 b5bed763a6633fcb8de9ddb11c7f08c1802c25fbd7b652828ead81e77155d8f45efcb8c320d35a9907eed9b09b3538fb55a9ab032672de55f7ed8158593e9513 WHIRLPOOL dbce16255aa4624c6abd78f7c993975562a7a4f1d10d863c87a46da95ca345562e6d8ed18af57c08f3fce81d2aa5edd9b7464cead7c612dc86f9937e6d46575c
+DIST aufs-sources-3.17_p20141020.tar.xz 160768 SHA256 061c16d03735a9eb83d20e86d93ff69d631529471b35a8cd509ccf23a5b834e4 SHA512 be4c54e8ef16351030f0c18b35183fca81e69a7eebda16039d4fcc4bc00be39604c78e6684766683c7e7cc2290ed590ae12f8e5c6f04163b6f92753e37b879a9 WHIRLPOOL ff9c4d7c7ea4f8d421c60d7e66dcca3bdedcd56b0e4dac9b578af19fc7858f5c3b9dc039d6ab310f1bef502bbe96b234cea2d248876a76c27589a496a76e3e3d
 DIST deblob-3.16 127089 SHA256 36a4b6667d16cac9f4882f4c96a57c37ea2f7ef8ed9e128db3ee9f60fc7d95d6 SHA512 8c7edc649eb68c194ab05856bf7a0359b18793001c247e6e742a56daaca7c159787240634a79a042ac8f31338900d8afcd3c82883ba5398be43d4d63a1882dec WHIRLPOOL 17b3e1025a138a13d5a0a973802d899e3881694cfc59520197994fd93245d835b092cb976873d15cf8b9079562ed3fa62dba19d87a668dbb757ddedd13d12946
+DIST deblob-3.17 127288 SHA256 93abf2894baf4d937ff2889fd1bdd04f1093bdb1321c79d8275e40f483e57ad1 SHA512 cb82b7cf59765991f74a1f5829cc6fb036a2e3466337b508884bcc5b27d7fef35db2e653cead705a37c7935c0bfb6bfeb1cdac7293de41994ee9c17ddca2ef39 WHIRLPOOL 0697a7bd39f270393814ffcbc746da6883e41fb32354223cdde8757b126d762bff55e69541c4d9ea0cc75093e19b73c4b6b09d98d9983e07b64fc4794615f2c8
 DIST deblob-check-3.16 632725 SHA256 9647fc6ef8dc3ad7cadc511c0987664ba971892c3d4f733725d5b86e32caa4bf SHA512 4dd69ae9c7a98b1b5fc01de48282d4c4da196bd938ec55c2a82442d1134822693d517466db2ed4ebe8d46014a9dbe1c0ba2263cb21e49372dd0d0ace5ba3d504 WHIRLPOOL 5feadd7e44e6d9c633f58fc34b91c5ba4dc3105d8d9f3abb656cd15fc3603c3d68ad94d8d233fc47f5378a98988e8f9fa62fcddc4b7d1cba197ca7e9784445a6
+DIST deblob-check-3.17 638139 SHA256 6ddbf2201595f0ba80166f44163621a4b14f508934c7dcc6c4f39573531aff71 SHA512 f9c60b21af2ee50db85a85329c0a5e3ecc5195ca6d9cc7d6bf499fcdb2eddf1454d99e30b91ce6062f484069ac2096da445643bdea8358c5ff1a79292a5947d6 WHIRLPOOL a0a15be3a48fabc56a782b0f6a92cb88520479d9f837e1de8b4bd2990b751e25f5a130542208f1c18b8f89c5a29edde846adb425834a640b6e188eee38bd98e4
 DIST genpatches-3.16-2.base.tar.xz 11984 SHA256 4e134e601992be75502e1d1378e653e664859150563f4e19f3cb1d3d0d22de88 SHA512 0d13aa991dac64061070303b23639afc27c52bab098187dda23efb5d7b1a9aba48f2a75adc80cf5b713f76852f3ab9f343ecfa465f1e21e0cc7b604a3b15acad WHIRLPOOL 2b68aa6dd6bbd43c1c299fffacd693d390f286727daadf64b799a3fbc77654bdf57b82503e5e3c9f9f91714e02b6a36f288753cbf05511886176df960e130f2d
 DIST genpatches-3.16-2.extras.tar.xz 17664 SHA256 97897a464ff638dda372c8bed7ee10723fde7f370cab2c770fd28b450bf3221f SHA512 251639762bdd1477314a2f2b89249955826848e15874677242c10c56e9f724c54b1afdaeae8479b5326bd4861efc73e8d29658170379a6e1724450335c0c1faa WHIRLPOOL dd38dd64c263dea74f20658e8904bf2f88858cd3f613b16f0361195f9bcb73859310897f35ba501a3f46fe1ccba573e051a61fe42b2d3383bf3750081ff6269a
 DIST genpatches-3.16-3.base.tar.xz 62548 SHA256 6263f780ba964ddabffa97b25a20e614ee4cfcdb5ba69553ffb2204ad1a66bb8 SHA512 746e477009c9c9950f5de1507361812ecd59d351c23c24d2913e6aeb76e31f96b2e781efe0098f6649a447a694ec1ecdc77f0123413d4f9e98e8bcdc81a07810 WHIRLPOOL e8a6b21fd79c2727104513f48fe1663c47032b397da700c53a331660b390a0257c610429bd85871038fc80a4f37de37b7e5d52ef6b7426ca75c7f60df6897b68
@@ -20,6 +27,10 @@ DIST genpatches-3.16-7.base.tar.xz 227080 SHA256 869812d6e6f3a9637c2694ff848316d
 DIST genpatches-3.16-7.extras.tar.xz 17656 SHA256 376d72d611afd3ac9c13aa5e62b152daa8cb2442409f16b8d8057c8300245740 SHA512 248e57d906890ffe1e0224b417920b97a0ed6d518506711c18a8266ae14c8be1d90d7e1392e09c0c2d618c6c8f8b967f28a59941878f02b794e9112fbe0986d6 WHIRLPOOL 610fbec313780e85900d872ee20f8dcf52241563b645165a42f826e49a69141b74545efe8986bb34f385873d7e1aeab6404be3b53e58e3bf156e5c71185c3983
 DIST genpatches-3.16-8.base.tar.xz 247036 SHA256 8959b280c4cf4a60f94a026a5087ff8b06795865fca76d1be1610b37989276e3 SHA512 eb18f469ce2ce1043cd24e7582e9cf1028b177bee96e7d2fa84cfb67a79906dd31acaf30f25048623deca3a6b36654d251c76331bf113d2a46b0eb90187f6589 WHIRLPOOL 36922a6a8657c7d36f70661d6299d367a0af6f43f61264aec21d9af8a837d1be5b5de71db03ddb3c541f159951351bb2b797162a53f435311c363dfa81e2f8a8
 DIST genpatches-3.16-8.extras.tar.xz 17660 SHA256 628ac76c67579c3aea1724180d4f72c65835c1cea85bf49f7f151ba380e2e1a9 SHA512 b1eb45e319fc967ac63757a04c85ceb13c712341e4e8ab9498735f6dd588759969d00209572b14722597e7906043468c334e90d39baa05d3a47c543b4e5de0dc WHIRLPOOL 16a9d602f76c148d330aa3fd5d5eeb2e959ab979004fab451bedc669d188ac8b37ff31f74ee6cd915c0c03abc6baa3fd385fa34453487ec2d4196f76c3778498
+DIST genpatches-3.17-3.base.tar.xz 19356 SHA256 cab4ae1f4a634a80fdaed7564409c07b21f92fb82939926ce5b811629f937261 SHA512 f7178667443ad7c0b74dd5ccf71e43d300f69bd27f79fdd126e46f5b0978b9c80aeda1fe0960285f4f8b25ca1a68598088814c74476a4aa128188ad116debb6d WHIRLPOOL 00f0c02b735ef06d86d386c8c09d8daa86368f00d1b84525f513923c5657a5bb05a4c6cc162c7639c92c9ff2f55401a9d5df6679362c28471e3aa0370f1c23ac
+DIST genpatches-3.17-3.extras.tar.xz 16156 SHA256 2b7be75015006f577aa4cae61f252bfd70202950dc6032dfafa89cee95004030 SHA512 457db9f84251ae557610f5bcc389c61e160870eef2a16f2d5a8437d96e7ab92a89cb59f1b056d0632bae12cd92a5ce017303b7ab52034fd59be24b0c2dc44dba WHIRLPOOL 23dc85f39fa7daacd92ea617c461585d5197e12d291e7dc14cc5088d510d990df1c77ca4856292cc2ec835287f9d9067c5dbbd8c1b216c96fdccdc928aebf9a3
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-8883161b98577bd2397dc8616f8e805fb1861be1.patch 15840 SHA256 8154715b3b3c7ebfb614db64afabeb192692e82c73bacdceaad0dc584a07fb8f SHA512 f0acbc5ca8115dbee77437e69ff7de45756ac3ba50bb895681630f4e4722b8cb1b034a2aded5645aac8ae88cb236f864f2d150fa4dea017ffee45ca1d70b9d8c WHIRLPOOL 40977af61d98f5d31695b6f81438ac08dbd07d51663df4d5a078564cdcc7fc9310d9ce97522c43bf0e631d10d2d8d304eb437700cf44799b7b9496675fc4a59e
+DIST lh-sources-kernel-da192988c7cb69709bb70f74f576f1479dce0e1d.patch 16381 SHA256 65118fccbba51186bd5904c2f3439e4dafbdebf3b638b2338abcf69a3bda1333 SHA512 66043a3cd267be5209c382b6aa9c9cf995d5499e8873546794042fbf17bacf577f9b4ab010fd3f20c629f40613c89b3e3d49536e7717b4a6e380c01547c39f41 WHIRLPOOL c43d99483c02fb5b193769f0a7a6ce9a868b12aad29fc1382b4d3c72cb4cb5baefa98929d5d9fb7d5e1524f5b6e75f5330ed039a15391a7a54e7b7053c3847a1
 DIST linux-3.16.tar.xz 80501624 SHA256 4813ad7927a7d92e5339a873ab16201b242b2748934f12cb5df9ba2cfe1d77a0 SHA512 64033e741d3f42ed06010e63e69d66e1d3d9414ef20f76834508878d4218b72619541a18ef4fd377204af2859e52198310998109b20ed9b67722586b28c9a231 WHIRLPOOL 69e5e367751185ff4e8d7c1f23c6f1e8f547fe782f581f6cf5f0bde301fa922185c8b996b815cf19fb7f14ca64042e264e87d321872ee3096adad02b1015769b
+DIST linux-3.17.tar.xz 80333152 SHA256 f5153ec93c5fcd41b247950e6a9bcbc63fa87beafd112c133a622439a0f76251 SHA512 29c99764e371f7005dbbe2bbe4458b4deeae5297da7e5b719b0f29f6f018629338b608369162ae6bd76bec4d8719cf491257ac57fdd5277cce8941b7f90246a0 WHIRLPOOL 4b0ba9d997f28a317991287160c91c4e4f2245d7e08c7cb9691f67c3838bddb3ab8048b01e841e6659eceb94a269b6bde32f4ca521d999593d0e9473c8559b46
