@@ -1,5 +1,11 @@
 
 
+*lh-sources-3.17.1-r1 (20 Oct 2014)
+
+  20 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.17.1-r1.ebuild,
+  +files/lh-sources-3.17-armv6.patch:
+  Bump to latest aufs3, genpatches and linux release
+
 *lh-sources-3.16.6 (16 Oct 2014)
 
   16 Oct 2014; Justin Lecher <jlec@gentoo.org> +lh-sources-3.16.6.ebuild:
